<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/input_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/welcome_back"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="372dp"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="false"
            android:background="@drawable/edit_text_top"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Button
            android:id="@+id/sign_In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="#FAD0E1"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/no_account"
            android:textAllCaps="true"
            android:textColor="#FAD0E1"
            android:textSize="13sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>